--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,3 +29,18 @@ spring:
 
 server:
   port: 8080
+
+# LLM 配置
+llm:
+  # 使用 OpenAI 兼容接口（可替换为 DeepSeek、通义千问、Ollama、GLM 等）
+  # 路径自动处理：若不以 /v* 结尾，自动追加 /v1
+  # Ollama: http://localhost:11434
+  # DeepSeek: https://api.deepseek.com
+  # 通义千问: https://dashscope.aliyuncs.com/compatible-mode
+  # GLM (智谱): https://open.bigmodel.cn/api/paas/v4  (已含 /v4，不会再追加)
+  endpoint: ${LLM_ENDPOINT:http://localhost:11434}
+  api-key: ${LLM_API_KEY:ollama}
+  model: ${LLM_MODEL:qwen2.5:7b}
+  temperature: 0.7
+  max-tokens: 2048
+  timeout: 120
