--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -44,3 +44,9 @@ llm:
   temperature: 0.7
   max-tokens: 2048
   timeout: 120
+
+# Agent 配置
+agent:
+  system-prompt: |
+    你是一个有帮助的 AI 助手。请用中文回答用户的问题。
+    回答要简洁、准确、有条理。
