feat(runtime): 实现 ReAct 多步循环与防护机制
- 新增 LoopConfig 配置类，支持 maxSteps、runTimeoutSeconds、stepTimeoutSeconds 配置
- 新增 CancellationManager 取消管理器，支持外部取消正在执行的循环
- 新增 RunContext 运行上下文，封装运行时状态、配置和控制信号
- 重构 AgentRuntime.executeLoop() 支持多步循环，包含取消、超时、最大步数等多重终止条件
- 新增 agent.cancel RPC 处理器，支持通过 WebSocket 取消正在执行的 run
- 新增 step.completed 事件类型，用于跟踪循环进度
- 更新 AgentRunHandler 使用 executeLoop 并处理 CancellationException 和 TimeoutException

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,6 +51,10 @@ agent:
     你是一个有帮助的 AI 助手。请用中文回答用户的问题。
     回答要简洁、准确、有条理。
   max-history-messages: 20
+  loop:
+    max-steps: 10
+    run-timeout-seconds: 300
+    step-timeout-seconds: 120
 
 # Tools 配置
 tools:
