feat: 添加 HITL 工具调用确认机制
- 新增 HitlManager 用于管理异步用户确认请求
- 在 AgentRuntime 中集成 HITL 确认流程，支持特定工具等待用户审批
- 新增 TOOL_CONFIRM_REQUEST 事件类型和 tool.confirm RPC 处理器
- 添加 application.yml 配置项 agent.hitl.timeout-seconds
- 用户可通过 RPC 提交批准或拒绝决策，并可修改工具参数

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,6 +55,8 @@ agent:
     max-steps: 10
     run-timeout-seconds: 300
     step-timeout-seconds: 120
+  hitl:
+    timeout-seconds: 300  # HITL 确认超时时间（5分钟）
 
 # Tools 配置
 tools:
