--- a/miniclaw-ui/package.json
+++ b/miniclaw-ui/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write --experimental-cli src"
   },
   "dependencies": {
+    "marked": "^17.0.1",
     "vue": "^3.5.27",
     "vue-router": "^5.0.1"
   },
