feat: 重构系统提示并增强技能集成
- 引入结构化系统提示构建器，参考 OpenClaw 设计实现模块化提示段落
- 扩展技能系统：为 LoadedSkill 添加 basePath 字段，支持技能资源目录访问
- 新增 ToolExecutionContext 机制，允许工具访问技能资源目录
- 增强文件工具安全性：区分写入（仅限 workspace）和读取（支持技能目录）
- 实现技能激活界面：新增设置页面、技能列表、详情面板和激活状态显示
- 添加运行取消功能，优化用户交互体验
- 更新配置：提高默认 token 限制和最大步骤数

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,11 +38,11 @@ llm:
   # DeepSeek: https://api.deepseek.com
   # 通义千问: https://dashscope.aliyuncs.com/compatible-mode
   # GLM (智谱): https://open.bigmodel.cn/api/paas/v4  (已含 /v4，不会再追加)
-  endpoint: ${LLM_ENDPOINT:http://localhost:11434}
-  api-key: ${LLM_API_KEY:ollama}
-  model: ${LLM_MODEL:qwen2.5:7b}
+  endpoint: ${LLM_ENDPOINT}
+  api-key: ${LLM_API_KEY}
+  model: ${LLM_MODEL}
   temperature: 0.7
-  max-tokens: 2048
+  max-tokens: 8192
   timeout: 120
 
 # Agent 配置
@@ -52,7 +52,7 @@ agent:
     回答要简洁、准确、有条理。
   max-history-messages: 20
   loop:
-    max-steps: 10
+    max-steps: 50
     run-timeout-seconds: 300
     step-timeout-seconds: 120
   hitl:
