feat(docker): 添加完整的Docker化部署支持
- 添加前后端Dockerfile及ARM64优化版本
- 添加docker-compose生产环境配置文件
- 添加一键构建打包脚本
- 添加Spring Boot Actuator健康检查
- 添加环境变量配置文件示例
- 添加Docker忽略文件

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,6 +30,16 @@ spring:
 server:
   port: 8080
 
+# Actuator 健康检查
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
+  endpoint:
+    health:
+      show-details: never
+
 # LLM 配置
 llm:
   # 使用 OpenAI 兼容接口（可替换为 DeepSeek、通义千问、Ollama、GLM 等）
