feat(nodeconsole): 新增远程节点管理子系统
- 新增 Node Console 子系统，支持 SSH/K8s/DB 类型节点管理
- 提供节点注册、更新、删除、连接测试和远程命令执行功能
- 实现凭据 AES-256-GCM 加密存储，确保敏感信息安全
- 新增远程命令三级安全分类器（只读/副作用/破坏性）
- 集成三个 LLM 工具：node_list、remote_exec、kubectl_exec
- 前端新增节点管理界面，支持节点列表展示和操作
- 添加 Flyway 数据库迁移脚本和 Spring Boot 配置支持

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -117,3 +117,8 @@ memory:
   flush:
     enabled: true
     token-threshold: 100000
+
+# Node Console 配置（远程机器管理）
+node-console:
+  encryption-key: ${NODE_CONSOLE_ENCRYPTION_KEY:}
+  default-safety-policy: strict
