feat(channels): 新增邮件和Webhook渠道管理功能
- 新增渠道管理后端服务，支持邮件(SMTP)和Webhook两种渠道类型
- 添加数据库迁移脚本，创建channels表及相关索引
- 实现渠道CRUD操作及连接测试功能，支持凭据加密存储
- 新增前端渠道管理界面，包含创建、测试、删除等操作
- 集成发送邮件和Webhook工具，供Agent调用进行外部通信
- 在设置侧边栏添加/channels入口，完善系统通知能力

--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,16 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Jakarta Mail (SMTP) -->
+        <dependency>
+            <groupId>jakarta.mail</groupId>
+            <artifactId>jakarta.mail-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.angus</groupId>
+            <artifactId>angus-mail</artifactId>
+        </dependency>
+
         <!-- Test dependencies -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
