feat: 添加SQLite支持并重构数据库相关代码
- 新增SQLite数据库配置文件(application-sqlite.yml)和迁移脚本
- 添加PostgreSQL配置文件(application-pg.yml)作为备选
- 重构数据库检索逻辑，提取MemoryChunkSearchOps接口
- 实现PgMemoryChunkSearchOps和SqliteMemoryChunkSearchOps分别支持PostgreSQL和SQLite
- 更新.gitignore以排除SQLite数据库文件
- 调整默认配置使用SQLite作为默认数据库
- 更新测试以适配新的数据库架构

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,8 @@
 spring:
   application:
     name: miniclaw
-
-  datasource:
-    url: jdbc:postgresql://localhost:5432/miniclaw
-    username: miniclaw
-    password: miniclaw
-    driver-class-name: org.postgresql.Driver
-    hikari:
-      minimum-idle: 5
-      maximum-pool-size: 10
-      auto-commit: true
-      connection-timeout: 30000
+  profiles:
+    default: sqlite
 
   jpa:
     hibernate:
@@ -20,11 +11,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
 
   flyway:
     enabled: true
-    locations: classpath:db/migration
     baseline-on-migrate: true
 
 server:
