feat: 添加 LLM 配置管理、Electron 桌面应用和 CI/CD 工作流
- 新增 LLM 配置管理功能，包括设置界面、配置保存与测试
- 添加 Electron 桌面应用，包含自动更新和 JRE 打包
- 引入 GitHub Actions 工作流用于自动构建和发布
- 新增应用状态检查，未配置 LLM 时引导至设置向导
- 优化 WebSocket 配置和静态资源服务

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,12 +37,17 @@ llm:
   # DeepSeek: https://api.deepseek.com
   # 通义千问: https://dashscope.aliyuncs.com/compatible-mode
   # GLM (智谱): https://open.bigmodel.cn/api/paas/v4  (已含 /v4，不会再追加)
-  endpoint: ${LLM_ENDPOINT}
-  api-key: ${LLM_API_KEY}
-  model: ${LLM_MODEL}
+  endpoint: ${LLM_ENDPOINT:}
+  api-key: ${LLM_API_KEY:}
+  model: ${LLM_MODEL:}
   temperature: 0.7
   max-tokens: 8192
   timeout: 300
+
+# MiniClaw 配置
+miniclaw:
+  config-dir: ${MINICLAW_CONFIG_DIR:./data}
+  webapp-dir: ${MINICLAW_WEBAPP_DIR:}
 
 # Agent 配置
 agent:
