fix(node-console): 修复输出截断单位并增强异常日志与并发处理
- 将 maxOutputLength 改为 maxOutputBytes 以明确按字节截断，防止 OOM
- 在 K8sConnector 中实现与 SshConnector 一致的 UTF-8 安全字节截断
- 为所有 connector 的异常添加 debug 级别详细日志
- 移除注册和更新节点时的前置 alias 检查，直接依赖数据库唯一约束避免 TOCTOU 竞态
- 在执行命令前添加安全策略检查，阻止危险命令

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -124,4 +124,4 @@ node-console:
   default-safety-policy: strict
   ssh-connect-timeout-seconds: 10  # SSH 连接超时
   exec-timeout-seconds: 60         # 命令执行超时
-  max-output-length: 32000
+  max-output-bytes: 32000          # 最大输出字节数（防止 OOM）
